<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:layout_gravity="bottom"

        android:title="@string/nav_menu_opcoes">
        <menu>
            <item
                android:id="@+id/nav_item_listar"
                android:checked="true"
                android:icon="@android:drawable/ic_menu_agenda"
                android:title="@string/listar" />
            <item
                android:id="@+id/nav_item_cadastrar"
                android:checked="true"
                android:icon="@android:drawable/ic_menu_add"
                android:title="@string/cadastrar" />
            <item
                android:id="@+id/nav_item_consultar"
                android:checked="true"
                android:icon="@android:drawable/ic_menu_search"
                android:title="@string/consultar" />
            <item
                android:id="@+id/nav_item_alterar"
                android:checked="true"
                android:icon="@android:drawable/ic_menu_manage"
                android:title="@string/alterar" />
            <item
                android:id="@+id/nav_item_deletar"
                android:checked="true"
                android:icon="@android:drawable/ic_menu_delete"
                android:title="@string/deletar" />
        </menu>
    </item>


</menu>